--- a/css/style.css
+++ b/css/style.css
@@ -587,7 +587,6 @@ body {
     color: #555;
 }
 
-
 .content-services-customization-txt {
     padding: 0;
     margin: 0;
@@ -2097,7 +2096,7 @@ body {
     color: #959595;
 }
 
-label,
+.menu-mobile,
 #menu {
     display: none;
 }
